--- a/css/media-query.css
+++ b/css/media-query.css
@@ -2,6 +2,7 @@
 @media only screen and (min-width: 320px) and (max-width: 479px){ 
     .col{
         max-width: 40rem;
+        border: 1px rgb(51, 0, 0) solid;
      }
      .col p{
          line-height: 1.5rem;
