--- a/css/media-query.css
+++ b/css/media-query.css
@@ -33,6 +33,7 @@
 @media  screen and (min-width: 480px) and (max-width: 767px){ 
     .col{
        width: 40rem;
+        border: 20px rgb(51, 0, 0) solid;
     }
     .left li img{
         max-width: 9.6rem;
