--- a/css/media-query.css
+++ b/css/media-query.css
@@ -58,6 +58,7 @@
 @media only screen and (min-width: 768px) and (max-width: 1080px){ 
     .col{
         width: 40rem;
+        border: 20px rgb(51, 0, 0) solid;
      }
  }
  .xp::before{
