--- a/css/media-query.css
+++ b/css/media-query.css
@@ -1,1 +1,84 @@
 
+@media only screen and (min-width: 320px) and (max-width: 479px){ 
+    .col{
+        max-width: 10rem;
+     }
+     .col p{
+         line-height: 1.5rem;
+     }
+     .left li img{
+         max-width: 9.6rem;
+     }
+     .menu{
+         display: block;
+         margin-right: 1rem; 
+     }
+     .right ul{
+         width: 100%;
+         background: linear-gradient(-45deg,  rgb(1, 1, 25), rgb(0, 0, 0, .1), rgb(165, 132, 85, .4));
+         overflow: hidden;
+     }
+     .right li{
+         display: block;
+         margin-top: 1rem;
+         margin-bottom: 1.625rem;
+         text-align: right;
+     }
+     .socials li{
+         padding: 1.5rem;
+     }
+ }
+
+@media  screen and (min-width: 480px) and (max-width: 767px){ 
+    .col{
+       width: 40rem;
+    }
+    .left li img{
+        max-width: 9.6rem;
+    }
+    .menu{
+        display: block;
+        margin-right: 1rem; 
+    }
+    .right ul{
+        width: 100%;
+        background: linear-gradient(-45deg,  rgb(1, 1, 25), rgb(0, 0, 0, .1), rgb(165, 132, 85, .4));
+        overflow: hidden;
+    }
+    .right li{
+        display: block;
+        margin-top: 1rem;
+        margin-bottom: 1.625rem;
+        text-align: right;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1080px){ 
+    .col{
+        width: 40rem;
+        border: 20px rgb(51, 0, 0) solid;
+     }
+ }
+ .xp::before{
+    margin-left: -22px;
+    margin-right: unset;
+}
+
+@media  only screen and (min-width: 3840px){ 
+     .col{
+        max-width: 40rem;
+     } 
+ }
+
+ /* @media screen 
+  and (device-width: 320px) 
+  and (device-height: 900px) 
+  and (-webkit-device-pixel-ratio: 2) 
+  and (orientation: landscape) {
+    .col{
+        float: none;
+        display: inline-block;
+        min-width: 10rem;
+    }
+  } */
+
