--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ header h3{
 .row{
 
     text-align: center;
-    margin-left: 2.4rem;
+    margin-left: 1rem;
     /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
 }
 .container{
@@ -116,6 +116,9 @@ header h3{
 }
 .col-2{
     color: rgb(1, 1, 35);
+}
+.col-2 p{
+    max-width: 30rem;
 }
 .col-3{
     background: linear-gradient(45deg,rgb(1, 1, 25), rgb(48, 48, 59));
@@ -154,7 +157,7 @@ header h3{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    margin-bottom: 5rem;
+    margin-bottom: 1rem;
 }
 .xp::before{
     content: '\2022';
@@ -190,7 +193,7 @@ b::after{
     display: inline-block;
     list-style: none;
     text-align: center;
-    padding: 2rem;
+    padding: .5rem;
 }
 .socials a{
     /* display: block ; */
